--- a/style.css
+++ b/style.css
@@ -242,10 +242,11 @@ a:hover{
 }
 .timeline-img{
     background-image: url(./images/DSC04257.jpeg);
-    height: 70vh;
-    width: 30vw;
-    background-position: center;
+    height: auto;
+    aspect-ratio: 4 / 3;
+    width: 100%;
     background-size: cover;
+    background-position: center;
 }
 .timings{
     margin: 30px;
