--- a/style.css
+++ b/style.css
@@ -156,6 +156,8 @@ a:hover{
 @media (max-width:570px){
     .checkbtn{
         display: block;
+        font-size: 2.5rem;
+        line-height: 2.8rem;
     }
     ul{
         position: fixed;
