--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1{
     font-weight: 500;
     line-height: var(--h1-size);
 }
+
 h2{
     font-size: var(--h2-size);
     font-weight: bold;
@@ -185,6 +186,24 @@ a:hover{
     #check:checked ~ ul{
         left: 0;
     }
+        h1 {
+        font-size: 2.2rem;
+        line-height: 2.5rem;
+        text-align: center;
+        word-wrap: break-word;
+        padding: 0 1rem;
+    }
+
+    h3 {
+        font-size: 1rem;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+
+    .container-in {
+        text-align: center;
+        padding: 0 1rem;
+    }
 }
 
 /* <===================HOME===================> */
@@ -244,11 +263,10 @@ a:hover{
 }
 .timeline-img{
     background-image: url(./images/DSC04257.jpeg);
-    height: auto;
-    aspect-ratio: 4 / 3;
-    width: 100%;
-    background-size: cover;
+    height: 70vh;
+    width: 30vw;
     background-position: center;
+    background-size: cover;
 }
 .timings{
     margin: 30px;
@@ -379,13 +397,15 @@ a:hover{
 /* <===================HANDS===================> */
 
 .hands{
-    height: 120vh;
-    width: 100%;
     background-image:url('./images/DSC04329.jpeg');
-    background-size: cover;
-    background-position-y: center;
-    background-attachment: fixed;
+    height: auto;
+    min-height: 60vh;
+    width: 100%;
+    background-image: url('./images/DSC04329.jpeg');
+    background-size: contain;
     background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: scroll
 }
 
     /* <===================STAY===================> */
